--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
-  margin: 0;
+  margin: 100px;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
 a {
   text-decoration: none !important;
+  color: black;
+  cursor: pointer;
 }
 
 form {
@@ -18,4 +22,128 @@ form {
 
 .btn-round {
   margin: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+h2,
+h3 {
+  font-weight: 100;
+}
+
+b {
+  font-weight: 400;
+}
+
+.Homepage {
+  text-align: center;
+}
+
+.pageLinks {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.pageLinks h2 {
+  margin-top: 5px;
+  font-weight: 300;
+}
+
+nav {
+  background-color: rgb(23, 186, 208);
+  text-align: center;
+  padding: 10px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.beers-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.beers-page img {
+  width: 50px;
+  margin: 20px;
+}
+
+.beer-card {
+  display: flex;
+  width: 600px;
+}
+
+.beer-details {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.beer-page-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.beer-page img {
+  height: 300px;
+  margin: 20px;
+}
+
+.beer-details-flex {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.beer-name-section h2 {
+  text-align: left;
+}
+
+.beer-record-section {
+  text-align: right;
+}
+
+.beer-description {
+  width: 100%;
+  text-align: left;
+}
+
+.grey {
+  color: grey;
+}
+
+.add-beer-form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  margin: 10px 0 15px;
+  padding: 10px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+}
+
+button {
+  width: 100px;
+  margin: 10px auto;
+  padding: 10px;
+  background-color: rgb(23, 186, 208);
+  border: 1px solid rgb(23, 186, 208);
+  border-radius: 10px;
+  color: white;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.search-input {
+  font-size: 1.2em;
 }
